tests/errors/abstract_prefix.nm
abstract component Main {
    prefix = "U";
} 